KTextEditorFactoryList: make qAddPostRoutine play well with K_GLOBAL_STATIC.

(like in KProtocolManagerPrivate)

I've encountered a crash related to double deletion of the list's memory, on app's exit. 
The code is now cleaner too. 

Example: KWrite uses KTextEditor::EditorChooser::editor(), what in turn calls KTextEditor::editor("katepart") for each new editor window, always with the same part name.

Solution: Use QSet (KTextEditorFactorySet) instead of QList to avoid multiple deletion of the same factory object.

BUG:160183


svn path=/trunk/KDE/kdelibs/interfaces/ktexteditor/; revision=795996